testsuite/tests/quotes/TH_top_splice.stderr

TH_top_splice.hs:6:7: error:
    • Top-level splices are not permitted without TemplateHaskell
    • In the untyped splice: $([| 1 |])
